Add module-check to packageman2 + more packages

--- a/packages.yaml
+++ b/packages.yaml
@@ -62,6 +62,9 @@ packages:
   hacking:
     - nmap
     - binwalk
+    - chkrootkit
+    - testdisk
+      
   
   fonts: 
     - ttf-mscorefonts-installer
