--- a/packages.yaml
+++ b/packages.yaml
@@ -20,7 +20,6 @@ packages:
     - gzip
     - zstd 
     - net-tools
-    - vim
     - npm
     - gdb
     - nodejs
@@ -59,6 +58,7 @@ packages:
     - clementine
     - discord
     - peek
+    - eog
 
   hacking:
     - nmap
