Add state: latest to all playbook downloading deb

--- a/ansible/discord.yaml
+++ b/ansible/discord.yaml
@@ -6,6 +6,7 @@
     - name: "Install Packages"
       register: aptout
       apt:
+        state: latest
         deb: https://discord.com/api/download?platform=linux&format=deb
 
     - debug: var=aptout
