--- a/ansible/fish.yaml
+++ b/ansible/fish.yaml
@@ -1,4 +1,4 @@
-- name: "Install latest fish and fisher plugin"
+- name: "Install latest fish shell"
   hosts: localhost
   connection: local
   become: true
@@ -17,11 +17,3 @@
         name: 
           - fish
     - debug: var=aptout
-
-    - name: "Install fisher and plugins"
-      register: fisherout
-      shell:
-        cmd: fish -c "curl -sL https://git.io/fisher | source; fisher install jorgebucaran/fisher; fisher install edc/bass"
-    - debug: var=fisherout
-
-
