--- a/ansible/care_package.yaml
+++ b/ansible/care_package.yaml
@@ -8,6 +8,7 @@
       apt:
         state: latest
         name: 
+          - sudo
           - g++
           - cmake
           - gcc
@@ -28,11 +29,32 @@
           - pkg-config
           - build-essential
           - checkinstall
+          - software-properties-common
+          - ttf-mscorefonts-installer
           - curl
           - wget
           - gnupg
           - lsb-release
-          - ffmpeg
           - tmux
-
+          - rclone
     - debug: var=aptout
+
+    - name: "Install Bat"
+      register: aptout2
+      apt:
+        deb: https://github.com/sharkdp/bat/releases/download/v0.24.0/bat-musl_0.24.0_amd64.deb
+
+    - debug: var=aptout2
+
+    - name: "Download nvim AppImage"
+      register: aptout
+      ansible.builtin.get_url:
+        url: https://github.com/neovim/neovim/releases/download/stable/nvim.appimage
+        dest: /usr/bin/nvim
+        mode: '0775'
+      
+    - debug: var=aptout
+
+
+
+
