Add rsync to care_package

--- a/ansible/care_package.yaml
+++ b/ansible/care_package.yaml
@@ -37,6 +37,7 @@
           - lsb-release
           - tmux
           - rclone
+          - rsync
     - debug: var=aptout
 
     - name: "Install Bat"
