--- a/ansible/btop.yaml
+++ b/ansible/btop.yaml
@@ -8,17 +8,17 @@
         path: /tmp/btop/
         state: directory
 
-    - name: "Download btop"
+    - name: "Download btop++"
       get_url:
         url: "https://github.com/aristocratos/btop/releases/download/v1.2.13/btop-x86_64-linux-musl.tbz"
         dest: "/tmp/btop/btop.tbz"
 
-    - name: "Uncompress btop"
+    - name: "Uncompress btop++"
       unarchive:
         src: "/tmp/btop/btop.tbz"
         dest: "/tmp/btop/"
 
-    - name: "Install Anki"
+    - name: "Install btop++"
       command:
         chdir: "/tmp/btop/btop"
         cmd: "./install.sh"
