--- a/ansible/care_package.yaml
+++ b/ansible/care_package.yaml
@@ -79,3 +79,7 @@
         name: "{{ ansible_env.SUDO_USER | default(ansible_env.USER) }}"
         groups: docker
         append: yes
+
+    - name: Make shorthand for localhost
+      command:
+        cmd: bash -c "grep -qxF '127.0.0.1   lh' /etc/hosts || echo '127.0.0.1   lh' >> /etc/hosts"
