--- a/ansible/nemo.yaml
+++ b/ansible/nemo.yaml
@@ -29,3 +29,8 @@
         cmd: bash -c "gsettings set org.gnome.desktop.background show-desktop-icons false && gsettings set org.nemo.desktop show-desktop-icons true"
     - debug: var=aptout4
 
+    - name: "Backup nautilus desktop file and delete it"
+      register: aptout5
+      command:
+        cmd: bash -c "if [ -e /usr/share/applications/org.gnome.Nautilus.desktop ]; then mv --force /usr/share/applications/org.gnome.Nautilus.desktop /usr/share/applications/nautilus.backup; fi"
+    - debug: var=aptout5
